--- a/src/components/compte/css/compte.scss
+++ b/src/components/compte/css/compte.scss
@@ -14,6 +14,7 @@
       width: fit-content;
       display: inline-flex;
       line-height: 20px;
+      height: 40px;
       font-weight: bold;
       color: $hover-blue;
       font-family: "Acumin";
